--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h2>
-  {{title}}
-</h2>
+<div class="container">
+<nav class="navbar navbar-default">
+  <div class="navbar-header">
+    <h1>Evan Manuella</h1>
+</div>
+  </nav>
+  <div class="panel panel-primary">
+      <app-about-me></app-about-me>
+  </div>
+  <footer class="page-footer font-small"  >
+    <div> credit to <a href="https://bootswatch.com">Bootswatch</a> and of course
+      <a href="https://getbootstrap.com/">Bootstrap</a> for the Sandstone theme </div>
+  </footer>
+</div>
